<resources>
    <string name="app_name">Demo_dialogFragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="show_dialog_fragment">show dialog fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_password">input password</string>
    <string name="input_username">input username</string>
    <string name="login">Login</string>
    <string name="show_alertdialog">show AlertDialog</string>
    <string name="save_instance_status">save instance status</string>
    <string name="volley_and_retain_fragment">Volley and Retain Fragment</string>
</resources>
