<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="jyq.demo_dialogfragment.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/tv_show_info"
        android:layout_width="match_parent"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
        android:text="fdfd"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_light"
        android:visibility="gone"
        android:layout_height="100dp"/>
    
    <Button
        android:layout_below="@+id/tv_show_info"
        android:id="@+id/bt_dialog_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_dialog_fragment"
        android:onClick="myOnClick"
        />
    
    <Button
        android:layout_below="@+id/bt_dialog_fragment"
        android:id="@+id/bt_alertdialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_alertdialog"
        android:onClick="myOnClick"
        />
    
    
    <Button
        android:layout_below="@+id/bt_alertdialog"
        android:id="@+id/bt_save_instance"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_instance_status"
        android:onClick="myOnClick"
        />


    <Button
        android:layout_below="@+id/bt_save_instance"
        android:id="@+id/bt_retain_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volley_and_retain_fragment"
        android:onClick="myOnClick"
        />

</RelativeLayout>
